--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,24 @@
-init
+name: CICD pipeline for book microservices
+
+on:
+  push:
+    branches:
+      - master  # Trigger CI/CD when code is pushed to the 'master' branch
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Build and push Docker image
+        run: |
+
+          docker login -u af-south-1@${{ secrets.ACCESSKEY }} -p ${{ secrets.SECRETACCESSKEY }} swr.af-south-1.myhuaweicloud.com
+          docker build -t swr.af-south-1.myhuaweicloud.com/ralf/fg:${{ github.sha }} ./api
+          docker push swr.af-south-1.myhuaweicloud.com/ralf/fg:${{ github.sha }}
+
+
+
