--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,8 +46,8 @@ jobs:
 
       - name: Update deployment
         run: |
-          sed -i "s@swr.af-south-1.myhuaweicloud.com/ralf/auth-api:[a-z0-9]*@swr.af-south-1.myhuaweicloud.com/ralf/auth-api:${{ github.sha }}@g" manifest/deployment.yaml    
-        #   sed -i "s@swr.af-south-1.myhuaweicloud.com/ralf/hello-world-nodejs:[a-z0-9]*@swr.af-south-1.myhuaweicloud.com/ralf/hello-world-nodejs:${{ github.sha }}@g" deployment.yaml    
+          sed -i "s@swr.af-south-1.myhuaweicloud.com/ralf/auth-api:[a-z0-9]*@swr.af-south-1.myhuaweicloud.com/ralf/auth-api:${{ github.sha }}@g" manifest/auth-service/deployment.yaml    
+          sed -i "s@swr.af-south-1.myhuaweicloud.com/ralf/hello-world-nodejs:[a-z0-9]*@swr.af-south-1.myhuaweicloud.com/ralf/hello-world-nodejs:${{ github.sha }}@g" manifest/inventory/deployment.yaml   
 
       - name: Debugging CCE access
         run: |
@@ -56,4 +56,8 @@ jobs:
 
       - name: Deploy manifest
         run: |
-          kubectl apply -f manifest/
+          kubectl apply -f manifest/auth-service
+          kubectl apply -f manifest/inventory-service
+          kubectl apply -f manifest/mongo
+          kubectl apply -f manifest/postgres
+          kubectl apply -f manifest/redis
