--- a/manifest/inventory-service/deployment.yaml
+++ b/manifest/inventory-service/deployment.yaml
@@ -12,6 +12,8 @@ spec:
       labels:
         app: inventory-service
     spec:
+      imagePullSecrets:
+        - name: default-secret    
       containers:
       - name: inventory-service
         image: swr.af-south-1.myhuaweicloud.com/ralf/inventory-api:efd2af4df959640451a8c4c47430a8ee9211dc3e
