--- a/manifest/auth-service/secret.yaml
+++ b/manifest/auth-service/secret.yaml
@@ -5,6 +5,6 @@ metadata:
 type: Opaque
 data:
   DB_USER: cmFsZg==        # base64 encoded "ralf"
-  DB_PASSWORD: UXdlcnR5MTIz # base64 encoded "Qwerty123"
+  DB_PASSWORD: UXdlcnR5MTIzNA== # base64 encoded "Qwerty123"
   DB_DATABASE: Ym9va3N0b3JlX2F1dGg=   # base64 encoded "bookstore_auth"
   JWT_SECRET: cmFsZg==
