--- a/manifest/postgres/secret.yaml
+++ b/manifest/postgres/secret.yaml
@@ -5,5 +5,5 @@ metadata:
 type: Opaque
 data:
   POSTGRES_USER: cmFsZg==        # base64 encoded "ralf"
-  POSTGRES_PASSWORD: UXdlcnR5MTIz # base64 encoded "Qwerty123"
+  POSTGRES_PASSWORD: UXdlcnR5MTIzNA== # base64 encoded "Qwerty123"
   POSTGRES_DB: Ym9va3N0b3JlX2F1dGg=   # base64 encoded "bookstore_auth"
