--- a/inventory-service/requirements.txt
+++ b/inventory-service/requirements.txt
@@ -1,5 +1,3 @@
-# requirements.txt
-
 Flask==2.2.2                # The web framework
 Flask-CORS==3.0.10          # CORS support for Flask
 PyJWT==2.6.0                # JWT handling
@@ -8,4 +6,4 @@ redis==4.5.5                # Redis client for Python
 requests==2.26.0            # HTTP library
 python-dotenv==1.0.0        # For loading environment variables from a .env file
 gunicorn==20.1.0            # WSGI server for production
-werkzeug==2.0.3
+werkzeug==2.0.3             # Fix for missing 'url_quote' import
