--- a/inventory-service/Dockerfile
+++ b/inventory-service/Dockerfile
@@ -31,7 +31,10 @@ WORKDIR /app
 
 # Install Python dependencies
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+
+# Upgrade pip and install dependencies
+RUN pip install --upgrade pip
+RUN pip install --no-cache-dir -r requirements.txt --verbose
 
 # Copy the application code
 COPY . .
