--- a/manifest/inventory-service/configmap.yaml
+++ b/manifest/inventory-service/configmap.yaml
@@ -3,9 +3,7 @@ kind: ConfigMap
 metadata:
   name: inventory-config
 data:
-  #MONGO_URI: "mongodb://mongodb-service:27017"
-  MONGO_URI: "mongodb://$(MONGO_USER):$(MONGO_PASSWORD)@mongo-service:27017/"
-  MONGO_DB: "books"
-  #REDIS_URI: "redis://redis-service:6379/0"
-  REDIS_URI: redis-service
+  MONGO_URI: "mongodb://mongo-service:27017/"
+  MONGO_DB: "bookstore"
+  REDIS_URI: "redis-service"
   REDIS_PORT: "6379"
