removed mongo host

--- a/manifest/inventory-service/configmap.yaml
+++ b/manifest/inventory-service/configmap.yaml
@@ -4,6 +4,6 @@ metadata:
   name: inventory-config
 data:
   MONGO_DB: "bookstore"
-  MONGO_HOST: "mongodb://mongodb-service:27017/"
+  MONGO_HOST: "mongodb-service"
   REDIS_URI: "redis-service"
   REDIS_PORT: "6379"
