--- a/manifest/auth-service/secret.yaml
+++ b/manifest/auth-service/secret.yaml
@@ -8,5 +8,5 @@ data:
   DB_PASSWORD: UXdlcnR5MTIzNA== # base64 encoded "Qwerty123"
   DB_DATABASE: Ym9va3N0b3JlX2F1dGg=
   MONGO_USER: cmFsZg== 
-  MONGO_PASSWORD: UXdlcnR5MTIzNA==   # base64 encoded "bookstore_auth"
+  MONGO_PASSWORD: UXdlcnR5MTIz  # base64 encoded "bookstore_auth"
   JWT_SECRET: cmFsZg==
