--- a/manifest/mongo/deployment.yaml
+++ b/manifest/mongo/deployment.yaml
@@ -67,12 +67,12 @@ spec:
         - name: MONGO_INITDB_ROOT_USERNAME
           valueFrom:
             secretKeyRef:
-              name: mongo-secret
+              name: mongo-config
               key: mongo-username
         - name: MONGO_INITDB_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: mongo-secret
+              name: mongo-config
               key: mongo-password
         - name: INIT_DB
           valueFrom:
@@ -82,7 +82,7 @@ spec:
         - name: MONGO_DB_USERNAME
           valueFrom:
             secretKeyRef:
-              name: mongo-secret
+              name: mongo-config
               key: mongo-username
         - name: MONGO_DB_PASSWORD
           valueFrom:
