--- a/inventory-service/requirements.txt
+++ b/inventory-service/requirements.txt
@@ -7,3 +7,4 @@ requests==2.26.0            # HTTP library
 python-dotenv==1.0.0        # For loading environment variables from a .env file
 gunicorn==20.1.0            # WSGI server for production
 werkzeug==2.2.2             # Fix for missing 'url_quote' import
+gunicorn==20.1.0 
