--- a/inventory-service/Dockerfile
+++ b/inventory-service/Dockerfile
@@ -21,4 +21,5 @@ COPY . .
 EXPOSE 3001
 
 # Start the application
-CMD ["python", "src/app.py"]
+# CMD ["python", "src/app.py"]
+CMD ["gunicorn", "-w", "4", "-b", "0.0.0.0:5000", "src.app:app"]
