--- a/manifest/inventory-service/deployment.yaml
+++ b/manifest/inventory-service/deployment.yaml
@@ -21,7 +21,7 @@ spec:
         - containerPort: 3001
         # envFrom:
         # - configMapRef:
-        #     name: inventory-config
+        #     name: inventory-configs
         env:
             - name: MONGO_HOST
               valueFrom:
