--- a/inventory-service/Dockerfile
+++ b/inventory-service/Dockerfile
@@ -10,6 +10,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
+# Install curl and wget
+RUN apt-get update && apt-get install -y curl wget
+
 # Copy and install dependencies
 COPY requirements.txt requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
