--- a/manifest/auth-service/secret.yaml
+++ b/manifest/auth-service/secret.yaml
@@ -10,3 +10,4 @@ data:
   MONGO_USER: cmFsZg== 
   MONGO_PASSWORD: UXdlcnR5MTIz  # base64 encoded "bookstore_auth"
   JWT_SECRET: cmFsZg==
+  REDIS_PASSWORD: UXdlcnR5MTIz
