--- a/manifest/inventory-service/configmap.yaml
+++ b/manifest/inventory-service/configmap.yaml
@@ -7,4 +7,5 @@ data:
   MONGO_HOST: "mongodb-service"
   REDIS_URI: "redis-service"
   REDIS_PORT: "6379"
+  REDIS_PASSWORD: "Qwerty123"
   TOKEN_VERIFICATION_URL: "http://auth-service:3000/auth/verify"
