--- a/manifest/redis/deployment.yaml
+++ b/manifest/redis/deployment.yaml
@@ -18,8 +18,8 @@ spec:
         ports:
         - containerPort: 6379
         envFrom:
-        - configMapRef:
-            name: redis-config
+        - secretRef:
+            name: redis-secret
         resources:
           requests:
             memory: "64Mi"
@@ -80,4 +80,11 @@ metadata:
 data:
   REDIS_PASSWORD: "Qwerty123"
 
-
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: redis-secret
+type: Opaque
+data:
+  REDIS_PASSWORD: UXdlcnR5MTIz
