--- a/manifest/redis/deployment.yaml
+++ b/manifest/redis/deployment.yaml
@@ -1,3 +1,41 @@
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: redis
+# spec:
+#   replicas: 1
+#   selector:
+#     matchLabels:
+#       app: redis
+#   template:
+#     metadata:
+#       labels:
+#         app: redis
+#     spec:
+#       containers:
+#       - name: redis
+#         image: redis:latest
+#         ports:
+#         - containerPort: 6379
+#         envFrom:
+#         - secretRef:
+#             name: redis-secret
+#         resources:
+#           requests:
+#             memory: "64Mi"
+#             cpu: "100m"
+#           limits:
+#             memory: "128Mi"
+#             cpu: "100m"
+
+#         volumeMounts:
+#         - mountPath: /data
+#           name: redis-storage
+#       volumes:
+#       - name: redis-storage
+#         persistentVolumeClaim:
+#           claimName: redis-pvc
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -27,14 +65,15 @@ spec:
           limits:
             memory: "128Mi"
             cpu: "100m"
-
         volumeMounts:
         - mountPath: /data
           name: redis-storage
+        command: ["redis-server", "--requirepass", "$(REDIS_PASSWORD)"]
       volumes:
       - name: redis-storage
         persistentVolumeClaim:
           claimName: redis-pvc
+
 ---
 apiVersion: v1
 kind: Service
