--- a/.github/workflows/main2.yaml
+++ b/.github/workflows/main2.yaml
@@ -1,17 +1,45 @@
+# name: Build to Harbor
+# on:
+#   push:
+#     branches:
+#       - main  # Trigger CI/CD when code is pushed to the 'master' branch
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v3
+
+#       - name: Login to Harbor Container Registry
+#         uses: docker/login-action@v3
+#         with:
+#           registry: demo.goharbor.io
+#           username: rafel0
+#           password: ${{ secrets.HARBOR_PASS }}
+
+#       - name: Build and push auth service
+#         run: |
+#           docker build -t demo.goharbor.io/hades/auth-service:${{ github.sha }}  auth-service/
+#           docker push demo.goharbor.io/hades/auth-service::${{ github.sha }} 
+
 name: Build to Harbor
 on:
   push:
     branches:
-      - main  # Trigger CI/CD when code is pushed to the 'master' branch
+      - main  # Trigger CI/CD when code is pushed to the 'main' branch
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout the code
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # Step 2: Login to Harbor Container Registry
       - name: Login to Harbor Container Registry
         uses: docker/login-action@v3
         with:
@@ -19,7 +47,8 @@ jobs:
           username: rafel0
           password: ${{ secrets.HARBOR_PASS }}
 
+      # Step 3: Build and Push the Docker Image
       - name: Build and push auth service
         run: |
-          docker build -t demo.goharbor.io/hades/auth-service:${{ github.sha }}  auth-service/
-          docker push demo.goharbor.io/hades/auth-service::${{ github.sha }} 
+          docker build -t demo.goharbor.io/hades/auth-service:${{ github.sha }} auth-service/
+          docker push demo.goharbor.io/hades/auth-service:${{ github.sha }}
