--- a/.github/workflows/main2.yaml
+++ b/.github/workflows/main2.yaml
@@ -44,11 +44,11 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: demo.goharbor.io
-          username: rafel0
-          password: ${{ secrets.HARBOR_PASS }}
+          username: admin
+          password: ${{ secrets.HARBOR_PASS2 }}
 
       # Step 3: Build and Push the Docker Image
       - name: Build and push auth service
         run: |
-          docker build -t demo.goharbor.io/hades/auth-service:${{ github.sha }} auth-service/
-          docker push demo.goharbor.io/hades/auth-service:${{ github.sha }}
+          docker build -t demo.goharbor.io/bookms/auth-service:${{ github.sha }} auth-service/
+          docker push demo.goharbor.io/bookms/auth-service:${{ github.sha }}
