--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,10 +54,10 @@ jobs:
           kubectl version
           kubectl cluster-info
 
-      - name: Deploy manifest
-        run: |
-          kubectl apply -f manifest/auth-service
-          kubectl apply -f manifest/inventory-service
-          kubectl apply -f manifest/mongo
-          kubectl apply -f manifest/postgres
-          kubectl apply -f manifest/redis
+      # - name: Deploy manifest
+      #   run: |
+      #     kubectl apply -f manifest/auth-service
+      #     kubectl apply -f manifest/inventory-service
+      #     kubectl apply -f manifest/mongo
+      #     kubectl apply -f manifest/postgres
+      #     kubectl apply -f manifest/redis
