--- a/.github/workflows/main2.yaml
+++ b/.github/workflows/main2.yaml
@@ -26,3 +26,10 @@ jobs:
         run: |
           docker build -t harbor.lemrex.online/bookms/auth-service:${{ github.sha }} auth-service/
           docker push harbor.lemrex.online/bookms/auth-service:${{ github.sha }}
+
+      - name: Build and push inventory service
+        run: |
+          docker build -t harbor.lemrex.online/bookms/inventory-service:${{ github.sha }} inventory-service/
+          docker push harbor.lemrex.online/bookms/inventory-service:${{ github.sha }}
+
+    
